# AIS

./: .gitignore  .readthedocs.yml  404.html  CONV_HSS1_PA1_B1_TEXP1_G1.fits  LICENSE  README.md  README.rst  citation.cff  example.py  general_tests.ipynb  general_tests.py  index.html  mkdocs.yml  photometric_tests.ipynb  polarimetrc_tests.ipynb  pyproject.toml  requirements.txt  setup.py  spectral_responses.ipynb
.github/workflows/: python-app.yml  python-package.yml  python-unittests.yml
AIS/: AIS.py  __init__.py  conftest.py  example.py  read_noise_calc.py  run.py  tests.py
AIS/Artificial_Image_Simulator/: __init__.py  artificial_image_simulator.py
AIS/Atmosphere_Spectral_Response/: __init__.py  atmosphere_spectral_response.csv  atmosphere_spectral_response.py  atmosphere_spectral_response.xlsx
Classes diagram/: classes_diagram.dia  classes_diagram_2.dia  classes_diagram_2.dia~
FITS/: 20220221T13222082.fits  20220221T16250727.fits  20220221T16250738.fits  20220221T16250745_BG.fits  20220221T16250749_BIAS.fits  20220221T16250753_DARK.fits  20220221T16250757_RAND.fits  20220221T16250761_FLAT.fits  20220221T16263110.fits  20220221T16263111_BG.fits  20220221T16263116_BIAS.fits  20220221T16263119_DARK.fits  20220221T16263123_RAND.fits  20220221T16263127_FLAT.fits  20220221T16263163.fits  2022218T16282766.fits  2022218T16290120.fits  CONV_HSS0.1_PA2_B1_TEXP1_G1.fits  CONV_HSS0.1_PA2_B1_TEXP1_G1_RAND.fits  CONV_HSS1_PA1_B1_TEXP1_G1.fits  CONV_HSS1_PA1_B1_TEXP1_G1_BG.fits  CONV_HSS1_PA1_B1_TEXP1_G1_BIAS.fits  CONV_HSS1_PA1_B1_TEXP1_G1_DARK.fits  CONV_HSS1_PA1_B1_TEXP1_G1_FLAT.fits  CONV_HSS1_PA1_B1_TEXP1_G1_POL.fits  CONV_HSS1_PA1_B1_TEXP1_G1_POL_BG.fits  CONV_HSS1_PA1_B1_TEXP1_G1_POL_BIAS.fits  CONV_HSS1_PA1_B1_TEXP1_G1_POL_DARK.fits  CONV_HSS1_PA1_B1_TEXP1_G1_POL_FLAT.fits  CONV_HSS1_PA1_B1_TEXP1_G1_POL_RAND.fits  CONV_HSS1_PA1_B1_TEXP1_G1_RAND.fits
aisenv/: pyvenv.cfg
code/: CONV_HSS1_PA1_B1_TEXP1_G1.fits  CONV_HSS1_PA1_B1_TEXP1_G1_BG.fits  CONV_HSS1_PA1_B1_TEXP1_G1_BIAS.fits  CONV_HSS1_PA1_B1_TEXP1_G1_DARK.fits  __init__.py  example.py  run.py
docs/: AIS.Artificial_Image_Simulator.rst  AIS.Background_Image.rst  AIS.Header.rst  AIS.Noise.rst  AIS.Point_Spread_Function.rst  AIS.Spectral_Energy_Distribution.rst  AIS.rst  authors.md  contribute.md  index.md  index_1.md  quick_start.md  requirements.txt  tutorial.md
docs_old/: modules.rst  tests.rst
index_1/: index.html
notebook/: general_tests.ipynb  photometric_tests.ipynb  spectral_responses.ipynb  test.ipynb
old_env/: pyvenv.cfg
scripts/: __init__.py  conftest.py  example.py  general_tests.py  test.py
search/: search_index.json
site/: 404.html  index.html  objects.inv
tests/: AIS_spectral_response_curves.py  __init__.py  test_AIS_initialization.py  test_AIS_operation.py  test_AIS_structure.py  test_ATM_SR.py  test_Atmosphere.py  test_BGI_class.py  test_CHC_class.py  test_Channel.py  test_HDR_class.py  test_Noise_class.py  test_PSF_class.py  test_RNC_class.py  test_S4_SR_class.py  test_SC_class.py  test_Sky_class.py  test_Source.py  test_Spectral_Energy_Distribution.py  test_Spectral_Response.py  test_TEL_SR.py  test_Telescope.py
(+467 files in other folders)
