[tool.poetry]
name = "ais"
version = "0.1.0"
description = ""
authors = ["Denis Bernardes"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
astropy = "^6.1.1"
scipy = "^1.14.0"
photutils = "^1.13.0"
pandas = "^2.2.2"
pytest = "^8.2.2"
matplotlib = "^3.9.0"
datetime = "^5.5"
sbpy = "^0.4.0"
pytest-coverage = "^0.0"
numpy = ">=1.23.5,<2.3"


[tool.poetry.group.lint.dependencies]
isort = "^5.13.2"
black = {extras = ["jupyter"], version = "^24.4.2"}
taskipy = "^1.13.0"
flake8 = "^7.1.0"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"
ipython = "^8.26.0"
mkdocs = "^1.6.0"
pymdown-extensions = "^10.8.1"
windmill = "^1.6"
mkdocs-material = "^9.5.28"
mkdocstrings = "^0.25.1"

[tool.isort]
profile="black"

[tool.taskipy.tasks]
lint = "black --check --diff . && isort --check --diff . "
test = "pytest -x tests --cov=AIS"
post_test = "coverage html"
open-cov = "start htmlcov\\index.html"
make-docs = "sphinx-apidoc -o docs\\source\\code AIS"
post_make-docs = "cd docs && make html"
open-docs = "start docs\\build\\html\\index.html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
