[tool.poetry]
name = "AIS"
version = "0.1.0"
description = ""
authors = ["Denis Bernardes"]
readme = "README.md"
packages = [
    { include = "AIS" }
]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
astropy = "^6.1.1"
scipy = "^1.14.0"
photutils = "^1.13.0"
pandas = "^2.2.2"
pytest = "^8.2.2"
matplotlib = "^3.9.0"
sbpy = "^0.4.0"
pytest-coverage = "^0.0"
numpy = ">=1.23.5,<2.3"
ipykernel = "^6.29.5"


[tool.poetry.group.lint.dependencies]
isort = "^5.13.2"
black = {extras = ["jupyter"], version = "^24.4.2"}
taskipy = "^1.13.0"


[tool.poetry.group.docs.dependencies]
ipython = "^8.26.0"
mkdocs = "^1.6.0"
pymdown-extensions = "^10.8.1"
mkdocs-material = "^9.5.28"
mkdocstrings = {extras = ["python"], version = "^0.25.1"}

[tool.isort]
profile="black"

[tool.taskipy.tasks]
lint = "black --check --diff . && isort --check --diff . "
test = "pytest tests//unit_tests -x --cov=AIS --cov-report=xml"
post_test = "coverage html"
open-cov = "start htmlcov//index.html"
make-docs = "mkdocs build"
open-docs = "start site//index.html"
make-req = "poetry export -f requirements.txt --output docs/requirements.txt --without-hashes --with docs --with lint"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

